cluster/apps/media-stack/lidarr/lidarr-deployment.yaml
# cluster/apps/media-stack/lidarr/lidarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: media-stack
  labels:
    app: lidarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      containers:
        - name: lidarr
          image: blampe/lidarr:latest
          ports:
            - name: http
              containerPort: 8686
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads 
              mountPath: /media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: lidarr-config
        - name: downloads 
          hostPath:
            path: /mnt/windows-media
            type: Directory
